# strix-halo-ds4-toolbox

./: .gitignore  AGENTS.md  README.md  check_drift.sh  refresh-toolboxes.sh
.github/workflows/: auto-version-cockpit.yml  build_and_publish.yml  poll-ds4.yaml  prune-old-toolboxes.yml
benchmark/: generate_results_json.py  run_benchmarks.sh
docs/: index.html  results.json
docs/assets/: style.css
ds4-strix-halo-cockpit/: pyproject.toml
ds4-strix-halo-cockpit/src/: config.py  main.py  model_manager.py  server_runner.py  toolbox_manager.py  widgets.py
ds4-strix-halo-cockpit/src/assets/: models.json  toolboxes.json
scratch/: ds4-bench-fast
toolboxes/: Dockerfile.gfx1201-rocm-7.2.4  Dockerfile.multi-node-rocm-7.2.4  Dockerfile.rocm-7.2.3  Dockerfile.rocm-7.2.3-alantsev  Dockerfile.rocm-7.2.4  Dockerfile.rocm-7.2.4-alantsev  Dockerfile.rocm-7.2.4-ejpir  Dockerfile.rocm7-nightlies  chunked_copy.patch
toolboxes/scripts/: check_drift.sh
