[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ds4-cockpit"
version = "2026.6.6"
description = "A TUI for managing ds4 Strix Halo toolbox containers and DeepSeek V4 models."
authors = [{name = "kyuz0"}]
requires-python = ">=3.10"
dependencies = [
    "textual>=0.85.2",
    "huggingface_hub[cli]>=0.23.0",
    "hf-transfer>=0.1.0",
    "rich>=13.0.0",
    "pyfiglet>=1.0.2"
]

[project.scripts]
ds4-cockpit = "src.main:cli_main"

[tool.setuptools]
packages = [
    "src"
]

[tool.setuptools.package-data]
"src" = ["assets/*.json"]
